--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
+    <!-- tailwindcss CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Flowbite - Tailwind CSS component library -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
+      href="https://unpkg.com/flowbite@1.5.1/dist/flowbite.min.css"
     />
+
     <!-- Font awseome -->
     <script
       src="https://kit.fontawesome.com/9e9fd9ff98.js"
@@ -27,101 +28,121 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css" />
 
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              common: "#1d1d1d",
+            },
+          },
+        },
+      };
+    </script>
+
     <title>Edu-Tech</title>
   </head>
   <body>
-    <header class="container">
+    <header class="container mx-auto">
       <!-- navbar starts -->
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <div>
-            <a class="navbar-brand fw-bold fs-1 text-black-50" href="#"
-              >EDU TECH</a
+
+      <nav
+        class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900"
+      >
+        <div
+          class="container flex flex-wrap justify-between items-center mx-auto"
+        >
+          <a href="" class="flex items-center">
+            <span
+              class="self-center text-gray-800 text-2xl md:text-4xl lg::text-4xl font-black whitespace-nowrap dark:text-white"
+              >EDU TECH</span
             >
-          </div>
+          </a>
           <button
-            class="navbar-toggler"
+            data-collapse-toggle="navbar-default"
             type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+            class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 md:hidden rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+            aria-controls="navbar-default"
             aria-expanded="false"
-            aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="sr-only">Open main menu</span>
+            <svg
+              class="w-6 h-6"
+              aria-hidden="true"
+              fill="currentColor"
+              viewbox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
           </button>
           <div
-            class="collapse navbar-collapse flex-grow-0 fw-bold"
-            id="navbarSupportedContent"
+            class="hidden w-full md:w-auto md:inline-flex"
+            id="navbar-default"
           >
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-xl-4">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+            <ul
+              class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+            >
+              <li>
+                <a
+                  href="#"
+                  class="block py-2 pr-4 pl-3 lg:text-xl font-semibold text-gray-500 rounded md:bg-transparent md:p-0 dark:text-white"
+                  aria-current="page"
+                  >Home</a
+                >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Courses</a>
+              <li>
+                <a
+                  href="#"
+                  class="block py-2 pr-4 pl-3 lg:text-xl font-semibold text-gray-500 rounded md:bg-transparent md:p-0 dark:text-white"
+                  >Cources</a
+                >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Deal</a>
+              <li>
+                <a
+                  href="#"
+                  class="block py-2 pr-4 pl-3 lg:text-xl font-semibold text-gray-500 rounded md:bg-transparent md:p-0 dark:text-white"
+                  >Deal</a
+                >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Success</a>
+              <li>
+                <a
+                  href="#"
+                  class="block py-2 pr-4 pl-3 lg:text-xl font-semibold text-gray-500 rounded md:bg-transparent md:p-0 dark:text-white"
+                  >Success</a
+                >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+              <li>
+                <a
+                  href="#"
+                  class="block py-2 pr-4 pl-3 lg:text-xl font-semibold text-gray-500 rounded md:bg-transparent md:p-0 dark:text-white"
+                  >About</a
+                >
               </li>
             </ul>
           </div>
-          <div class="d-none d-md-none d-lg-block">
-            <button class="btn btn-outline-primary fw-bold">Register</button>
+          <div class="hidden lg:block md:block">
+            <button
+              class="border text-normal text-lg lg:text-xl  border-blue-400 text-blue-400 px-10 py-2 rounded-lg font-bold hover:bg-blue-700 hover:text-white"
+            >
+              Register
+            </button>
           </div>
         </div>
       </nav>
+
       <!-- navbar end -->
       <!-- Header/bannar start carousal-->
-      <div
-        id="carouselExampleControls"
-        class="carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="..." />
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+
       <!-- Header/bannar end carousal -->
     </header>
 
-    <!-- Bootstrap cdn -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Flowbite - Tailwind CSS component library -->
+    <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
   </body>
 </html>
