--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
           <div class="hidden lg:block md:block">
             <button
-              class="border text-normal text-lg lg:text-xl  border-blue-400 text-blue-400 px-10 py-2 rounded-lg font-bold hover:bg-blue-700 hover:text-white"
+              class="border text-normal text-lg lg:text-xl border-blue-400 text-blue-400 px-10 py-2 rounded-lg font-bold hover:bg-blue-700 hover:text-white"
             >
               Register
             </button>
@@ -139,8 +139,178 @@
       <!-- navbar end -->
       <!-- Header/bannar start carousal-->
 
+      <div
+        id="default-carousel"
+        class="container px-3 relative"
+        data-carousel="static"
+      >
+        <!-- Carousel wrapper -->
+        <div
+          class="overflow-hidden relative text-center h-[50vh] object-fill rounded-lg md:h-[90vh]"
+        >
+          <!-- Item 1 -->
+          <div
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-0 z-20"
+            data-carousel-item=""
+          >
+            <!-- carousal caption -->
+            <div
+              class="absolute top-1/2 left-1/2 text-xl md:text-6xl space-y-2 md:space-4-0 font-semibold text-white w-2/3 -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 z-20"
+            >
+              <span class="text-xl md:text-6xl font-semibold"
+                >Get Started Digital Learning</span
+              >
+
+              <p class="text-sm md:text-base font-semibol mt-3">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </p>
+              <button
+                type="button"
+                class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
+              >
+                Get Started
+              </button>
+            </div>
+            <!-- carousal image-->
+            <img
+              src="images/cover/cover-1.jpg"
+              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 h-100"
+              alt="..."
+            />
+          </div>
+          <!-- Item 2 -->
+          <!-- carousal caption -->
+          <div
+            class="absolute top-1/2 left-1/2 text-xl md:text-6xl space-y-2 md:space-4-0 font-semibold text-white w-2/3 -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 z-30"
+          >
+            <span class="text-xl md:text-6xl font-semibold"
+              >Get Started Digital Learning</span
+            >
+
+            <p class="text-sm md:text-base font-semibol mt-3">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+            <button
+              type="button"
+              class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
+            >
+              Get Started
+            </button>
+          </div>
+          <div
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-full z-10"
+            data-carousel-item=""
+          >
+            <!-- carousal image -->
+            <img
+              src="images/cover/cover-2.jpg"
+              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
+              alt="..."
+            />
+          </div>
+          <!-- Item 3 -->
+          <!-- carousal caption -->
+          <div
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform -translate-x-full z-10"
+            data-carousel-item=""
+          >
+            <!-- carousal image -->
+            <img
+              src="images/cover/cover-3.jpg"
+              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
+              alt="..."
+            />
+          </div>
+        </div>
+        <!-- Slider indicators -->
+        <div
+          class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2"
+        >
+          <button
+            type="button"
+            class="w-3 h-3 rounded-full bg-white dark:bg-gray-800"
+            aria-current="true"
+            aria-label="Slide 1"
+            data-carousel-slide-to="0"
+          ></button>
+          <button
+            type="button"
+            class="w-3 h-3 rounded-full bg-white/50 dark:bg-gray-800/50 hover:bg-white dark:hover:bg-gray-800"
+            aria-current="false"
+            aria-label="Slide 2"
+            data-carousel-slide-to="1"
+          ></button>
+          <button
+            type="button"
+            class="w-3 h-3 rounded-full bg-white/50 dark:bg-gray-800/50 hover:bg-white dark:hover:bg-gray-800"
+            aria-current="false"
+            aria-label="Slide 3"
+            data-carousel-slide-to="2"
+          ></button>
+        </div>
+        <!-- Slider controls -->
+        <button
+          type="button"
+          class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+          data-carousel-prev=""
+        >
+          <span
+            class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+          >
+            <svg
+              aria-hidden="true"
+              class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800"
+              fill="none"
+              stroke="currentColor"
+              viewbox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M15 19l-7-7 7-7"
+              ></path>
+            </svg>
+            <span class="sr-only">Previous</span>
+          </span>
+        </button>
+        <button
+          type="button"
+          class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+          data-carousel-next=""
+        >
+          <span
+            class="inline-flex justify-center items-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none"
+          >
+            <svg
+              aria-hidden="true"
+              class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800"
+              fill="none"
+              stroke="currentColor"
+              viewbox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M9 5l7 7-7 7"
+              ></path>
+            </svg>
+            <span class="sr-only">Next</span>
+          </span>
+        </button>
+      </div>
+
       <!-- Header/bannar end carousal -->
     </header>
+
+    <main class="container mx-auto">
+
+    </main>
 
     <!-- Flowbite - Tailwind CSS component library -->
     <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
