--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <title>Edu-Tech</title>
   </head>
   <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto mb-12 md:mb-28">
       <!-- navbar starts -->
 
       <nav
@@ -55,7 +55,7 @@
         >
           <a href="" class="flex items-center">
             <span
-              class="self-center text-gray-800 text-2xl md:text-4xl lg::text-4xl font-black whitespace-nowrap dark:text-white"
+              class="self-center text-gray-800 common text-2xl md:text-4xl lg::text-4xl font-black whitespace-nowrap dark:text-white"
               >EDU TECH</span
             >
           </a>
@@ -150,24 +150,24 @@
         >
           <!-- Item 1 -->
           <div
-            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-0 z-20"
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-0 z-0"
             data-carousel-item=""
           >
             <!-- carousal caption -->
             <div
-              class="absolute top-1/2 left-1/2 text-xl md:text-6xl space-y-2 md:space-4-0 font-semibold text-white w-2/3 -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 z-20"
+              class="absolute top-1/2 left-1/2 text-xl md:text-6xl space-y-2 md:space-4-0 font-semibold text-white w-2/3 -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800"
             >
-              <span class="text-xl md:text-6xl font-semibold"
+              <span class="text-2xl md:text-6xl font-semibold"
                 >Get Started Digital Learning</span
               >
 
-              <p class="text-sm md:text-base font-semibol mt-3">
+              <p class="text-xs md:text-base font-semibol mt-3">
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page when looking at its layout.
               </p>
               <button
                 type="button"
-                class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
+                class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 z-0"
               >
                 Get Started
               </button>
@@ -175,18 +175,31 @@
             <!-- carousal image-->
             <img
               src="images/cover/cover-1.jpg"
-              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 h-100"
+              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2 h-100 z-20"
               alt="..."
             />
           </div>
           <!-- Item 2 -->
-          <!-- carousal caption -->
+
+          <div
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-full z-0"
+            data-carousel-item=""
+          >
+            <!-- carousal image -->
+            <img
+              src="images/cover/cover-2.jpg"
+              class="block absolute top-1/2 z-0 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
+              alt="..."
+            />
+          </div>
+          <!-- Item 3 -->
+
           <div
             class="absolute top-1/2 left-1/2 text-xl md:text-6xl space-y-2 md:space-4-0 font-semibold text-white w-2/3 -translate-x-1/2 -translate-y-1/2 sm:text-3xl dark:text-gray-800 z-30"
           >
             <span class="text-xl md:text-6xl font-semibold"
-              >Get Started Digital Learning</span
-            >
+              >Get Started Digital
+            </span>
 
             <p class="text-sm md:text-base font-semibol mt-3">
               It is a long established fact that a reader will be distracted by
@@ -194,32 +207,19 @@
             </p>
             <button
               type="button"
-              class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"
+              class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-semibold rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 z-0"
             >
               Get Started
             </button>
           </div>
           <div
-            class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-full z-10"
-            data-carousel-item=""
-          >
-            <!-- carousal image -->
-            <img
-              src="images/cover/cover-2.jpg"
-              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
-              alt="..."
-            />
-          </div>
-          <!-- Item 3 -->
-          <!-- carousal caption -->
-          <div
-            class="duration-700 ease-in-out absolute inset-0 transition-all transform -translate-x-full z-10"
+            class="duration-700 ease-in-out absolute inset-0 transition-all transform -translate-x-full z-20"
             data-carousel-item=""
           >
             <!-- carousal image -->
             <img
               src="images/cover/cover-3.jpg"
-              class="block absolute top-1/2 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
+              class="block absolute top-1/2 z-0 left-1/2 w-full h-full object-cover -translate-x-1/2 -translate-y-1/2"
               alt="..."
             />
           </div>
@@ -308,8 +308,179 @@
       <!-- Header/bannar end carousal -->
     </header>
 
-    <main class="container mx-auto">
+    <main class="container mx-auto px-3">
+      <!-- discover section start -->
+      <section
+        class="container h-screen mx-auto flex flex-col text-lg items-center text-center"
+      >
+        <h2 class="md:text-5xl text-2xl font-semibold">
+          Discover Our Popular <br />
+          Courses
+        </h2>
+        <p class="md:text-lg text-sm font-medium mt-2">
+          It is a long established fact that a reader will be distracted by the
+          readable <br />
+          content of a page when looking at its layout.
+        </p>
+        <div class="grid grid-cols-1 lg:grid-cols-2 mt-14 gap-6">
+          <!-- box 1 -->
+          <div
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-1.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Fundamental Of UI/UX Design
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $220
+              </h4>
+            </div>
+          </div>
 
+          <!-- box 2 -->
+          <div
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-2.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Fullstack Web Development
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $520
+              </h4>
+            </div>
+          </div>
+
+          <!-- box 3 -->
+          <div
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-3.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Javascript Basic to advanced
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $220
+              </h4>
+            </div>
+          </div>
+
+          <!-- box 4 -->
+          <div
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-4.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Digital Marketing
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $220
+              </h4>
+            </div>
+          </div>
+
+          <!-- box 5 -->
+          <div
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-5.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Photography Basic Rules
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $220
+              </h4>
+            </div>
+          </div>
+
+          <!-- box 6 -->
+          <div
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+          >
+            <div class="md:w-1/3 w-full p-3 self-center">
+              <img
+                src="images/course/course-6.png"
+                class="object-cover md:object-none w-full"
+                alt=""
+              />
+            </div>
+            <div class="md:w-auto text-left self-center">
+              <h5 class="text-xl font-semibold text-gray-800">
+                Motion Graphics
+              </h5>
+              <p class="text-sm font-medium mt-2">
+                Some quick example text to build on the card title and make up
+                the bulk of the card.
+              </p>
+              <h4 class="text-xl font-semibold mt-2 text-blue-500">
+                PRICE : $220
+              </h4>
+            </div>
+          </div>
+        </div>
+        <button
+          type="button"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-10"
+        >
+          View All
+        </button>
+      </section>
+      <!-- discover section end -->
     </main>
 
     <!-- Flowbite - Tailwind CSS component library -->
