Explore The elearning Institute section done

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <main class="container mx-auto px-3">
       <!-- discover section start -->
       <section
-        class="container h-screen mx-auto flex flex-col text-lg items-center text-center"
+        class="container h-100 mx-auto flex flex-col text-lg items-center text-center"
       >
         <h2 class="md:text-5xl text-2xl font-semibold">
           Discover Our Popular <br />
@@ -481,6 +481,39 @@
         </button>
       </section>
       <!-- discover section end -->
+
+      <!-- Explore The elearning Institute section start -->
+      <section class="container mt-12 mx-auto flex items-center h-100">
+        <div
+          class="grid grid-cols-1 lg::grid-cols-2 justify-center gap-x-5 gap-y-5 place-items-center"
+        >
+          <div class="grid-cols-1">
+            <img src="images/working.jpg" class="" alt="" />
+          </div>
+          <div class="space-y-4 lg::space-y-0">
+            <h4 class="md:text-5xl text-2xl font-semibold">
+              Explore The elearning Institute
+            </h4>
+            <p class="font-medium">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable. If you are going to use a passage of Lorem
+              Ipsum, you need to be sure. <br /><br>
+
+              Anything embarrassing hidden in the middle of text. All the Lorem
+              Ipsum generators on the Internet tend to repeat predefined.
+            </p>
+            <button
+            type="button"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-8 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 "
+          >
+            Read More
+          </button>
+          </div>
+        </div>
+      </section>
+      <!-- Explore The elearning Institute section end -->
     </main>
 
     <!-- Flowbite - Tailwind CSS component library -->
