--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       rel="stylesheet"
       href="https://unpkg.com/flowbite@1.5.1/dist/flowbite.min.css"
     />
+    <!-- tailwind tw-element library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css"
+    />
 
     <!-- Font awseome -->
     <script
@@ -485,7 +498,7 @@
       <!-- Explore The elearning Institute section start -->
       <section class="container mt-12 mx-auto flex items-center h-100">
         <div
-          class="grid grid-cols-1 lg::grid-cols-2 justify-center gap-x-5 gap-y-5 place-items-center"
+          class="grid grid-cols-1 lg:grid-cols-2 justify-center gap-x-5 gap-y-5 place-items-center"
         >
           <div class="grid-cols-1">
             <img src="images/working.jpg" class="" alt="" />
@@ -517,9 +530,9 @@
 
       <!-- Register Now modal section start -->
       <section
-        class="container mt-12 mx-auto flex flex-col lg:flex-row items-center justify-center h-64 bg-blue-600 text-white"
+        class="container mt-12 mx-auto grid grid-cols-1 md:grid-cols-2 place-items-center md:h-64 h-80 bg-blue-600 text-white justify-between"
       >
-        <div>
+        <div class="md:px-16 text-center md:text-left space-y-3">
           <h5 class="text-5xl font-semibold">Ready to join?</h5>
           <p class="font-normal text-sm">
             It is a long established fact that a reader will be distracted by
@@ -528,103 +541,114 @@
         </div>
 
         <!-- modal -->
-        <div>
-          <!-- Modal toggle -->
-          <button
-            class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-            type="button"
-            data-modal-toggle="defaultModal"
-            data-modal-show="false"
-            aria-modal="false"
-          >
-            Toggle modal
-          </button>
+        <div class="ml-auto px-16">
+          <div class="">
+            <button
+              type="button"
+              class="inline-block px-6 py-4 text-black bg-white text-md font-semibold leading-tight uppercase rounded shadow-md hover:bg-red-700  hover:text-white active:shadow-lg transition duration-150 ease-in-out"
+              data-bs-toggle="modal"
+              data-bs-target="#exampleModalCenter"
+            >
+              Register Now
+            </button>
+          </div>
 
-          <!-- Main modal -->
           <div
-            id="defaultModal"
-            data-modal-show="false"
+            class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto"
+            id="exampleModalCenter"
             tabindex="-1"
-            class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full justify-center items-center flex"
-            aria-modal="false"
+            aria-labelledby="exampleModalCenterTitle"
+            aria-modal="true"
             role="dialog"
           >
-            <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
-              <!-- Modal content -->
-              <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                <!-- Modal header -->
+            <div
+              class="modal-dialog modal-dialog-centered relative w-auto pointer-events-none"
+            >
+              <div
+                class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current"
+              >
                 <div
-                  class="flex justify-between items-start p-4 rounded-t border-b dark:border-gray-600"
+                  class="modal-header flex flex-shrink-0 items-center justify-between p-4 border-b border-gray-200 rounded-t-md"
                 >
-                  <h3
-                    class="text-xl font-semibold text-gray-900 dark:text-white"
+                  <h5
+                    class="text-xl font-medium leading-normal text-gray-800"
+                    id="exampleModalScrollableLabel"
                   >
-                    Terms of Service
-                  </h3>
+                    Please put your information
+                  </h5>
                   <button
                     type="button"
-                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                    data-modal-toggle="defaultModal"
-                  >
-                    <svg
-                      aria-hidden="true"
-                      class="w-5 h-5"
-                      fill="currentColor"
-                      viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                        clip-rule="evenodd"
-                      ></path>
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                  </button>
+                    class="btn-close box-content w-4 h-4 p-1 text-black border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-black hover:opacity-75 hover:no-underline"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
                 </div>
-                <!-- Modal body -->
-                <div class="p-6 space-y-6">
-                  <p
-                    class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-                  >
-                    With less than a month to go before the European Union
-                    enacts new consumer privacy laws for its citizens, companies
-                    around the world are updating their terms of service
-                    agreements to comply.
-                  </p>
-                  <p
-                    class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-                  >
-                    The European Union’s General Data Protection Regulation
-                    (G.D.P.R.) goes into effect on May 25 and is meant to ensure
-                    a common set of data rights in the European Union. It
-                    requires organizations to notify users as soon as possible
-                    of high-risk data breaches that could personally affect
-                    them.
-                  </p>
-                </div>
-                <!-- Modal footer -->
-                <div
-                  class="flex items-center p-6 space-x-2 rounded-b border-t border-gray-200 dark:border-gray-600"
-                >
-                  <button
-                    data-modal-toggle="defaultModal"
-                    type="button"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                  >
-                    I accept
-                  </button>
-                  <button
-                    data-modal-toggle="defaultModal"
-                    type="button"
-                    class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
-                  >
-                    Decline
-                  </button>
+                <div class="modal-body text-black relative p-4">
+                  <div class="block p-6 rounded-lg shadow-lg bg-white max-w-md">
+                    <form>
+                      <div class="grid grid-cols-2 gap-4">
+                        <div class="form-group mb-6">
+                          <input
+                            type="text"
+                            class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                            id="exampleInput123"
+                            aria-describedby="emailHelp123"
+                            placeholder="First name"
+                          />
+                        </div>
+                        <div class="form-group mb-6">
+                          <input
+                            type="text"
+                            class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                            id="exampleInput124"
+                            aria-describedby="emailHelp124"
+                            placeholder="Last name"
+                          />
+                        </div>
+                      </div>
+                      <div class="form-group mb-6">
+                        <input
+                          type="email"
+                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                          id="exampleInput125"
+                          placeholder="Email address"
+                        />
+                      </div>
+                      <div class="form-group mb-6">
+                        <input
+                          type="password"
+                          class="form-control block w-full px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                          id="exampleInput126"
+                          placeholder="Password"
+                        />
+                      </div>
+                      <div class="form-group form-check text-center mb-6">
+                        <input
+                          type="checkbox"
+                          class="form-check-input appearance-none h-4 w-4 border border-gray-300 rounded-sm bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain mr-2 cursor-pointer"
+                          id="exampleCheck25"
+                          checked
+                        />
+                        <label
+                          class="form-check-label inline-block text-gray-800"
+                          for="exampleCheck25"
+                          >Subscribe to our newsletter</label
+                        >
+                      </div>
+                      <button
+                        type="submit"
+                        class="w-full px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                      >
+                        Sign up
+                      </button>
+                    </form>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+        
         </div>
       </section>
       <!-- Register Now modal section end -->
@@ -632,5 +656,6 @@
 
     <!-- Flowbite - Tailwind CSS component library -->
     <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
   </body>
 </html>
