student section done

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 mt-14 gap-6">
           <!-- box 1 -->
           <div
-            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -363,7 +363,7 @@
 
           <!-- box 2 -->
           <div
-            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -388,7 +388,7 @@
 
           <!-- box 3 -->
           <div
-            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -413,7 +413,7 @@
 
           <!-- box 4 -->
           <div
-            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -438,7 +438,7 @@
 
           <!-- box 5 -->
           <div
-            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -463,7 +463,7 @@
 
           <!-- box 6 -->
           <div
-            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl"
+            class="lg:flex justify-center md:hidden hidden md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
           >
             <div class="md:w-1/3 w-full p-3 self-center">
               <img
@@ -530,11 +530,11 @@
 
       <!-- Register Now modal section start -->
       <section
-        class="container mt-12 mx-auto grid grid-cols-1 md:grid-cols-2 place-items-center md:h-64 h-80 bg-blue-600 text-white justify-between"
+        class="container mt-12 mx-auto grid grid-cols-1 md:grid-cols-2 place-items-center md:h-64 h-80 bg-blue-600 text-white justify-between rounded-none md:rounded-xl"
       >
         <div class="md:px-16 text-center md:text-left space-y-3">
           <h5 class="text-5xl font-semibold">Ready to join?</h5>
-          <p class="font-normal text-sm">
+          <p class="font-normal text-sm px-5 md:px-0">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
@@ -545,7 +545,7 @@
           <div class="">
             <button
               type="button"
-              class="inline-block px-6 py-4 text-black bg-white text-md font-semibold leading-tight uppercase rounded shadow-md hover:bg-red-700  hover:text-white active:shadow-lg transition duration-150 ease-in-out"
+              class="inline-block px-6 py-4 text-black bg-white text-md font-semibold leading-tight uppercase rounded shadow-md hover:bg-red-700 hover:text-white active:shadow-lg transition duration-150 ease-in-out"
               data-bs-toggle="modal"
               data-bs-target="#exampleModalCenter"
             >
@@ -647,11 +647,79 @@
               </div>
             </div>
           </div>
-
-        
         </div>
       </section>
       <!-- Register Now modal section end -->
+
+      <sectionn
+        class="container mt-12 mx-auto flex flex-col text-center lg:text-left h-100"
+      >
+        <h4 class="md:text-5xl text-2xl font-semibold">
+          Meet Our Successfull <br />
+          Students
+        </h4>
+        <p class="md:text-lg text-sm font-medium mt-2 px-6 lg:px-0">
+          It is a long established fact that a reader will be distracted by
+          <br />
+          the readable content of a page when looking at its layout.
+        </p>
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-10 gap-x-4 gap-y-6"
+        >
+          <div class="p-4 shadow-xl">
+            <div class="flex flex-col">
+              <img src="images/student/student-1.png" alt="" />
+              <div>
+                <h3 class="text-2xl font-semibold">Name : alex</h3>
+                <h4 class="font-medium">UI/UX designer</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="p-4 shadow-xl">
+            <div class="flex flex-col">
+              <img src="images/student/student-2.png" alt="" />
+              <div>
+                <h3 class="text-2xl font-semibold">Name : shokina</h3>
+                <h4 class="font-medium">Motion Design</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="p-4 shadow-xl">
+            <div class="flex flex-col">
+              <img src="images/student/student-3.png" alt="" />
+              <div>
+                <h3 class="text-2xl font-semibold">Name : Yoyo</h3>
+                <h4 class="font-medium">Graphic Designer</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="p-4 shadow-xl">
+            <div class="flex flex-col">
+              <img src="images/student/student-4.png" alt="" />
+              <div>
+                <h3 class="text-2xl font-semibold">Name : dhongi</h3>
+                <h4 class="font-medium">Graphic Designer</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="self-center">
+          <button
+            type="button"
+            class="text-white bg-blue-700  hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 rounded-lg text-sm px-8 py-4 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-10 font-semibold"
+          >
+            View All
+          </button>
+        </div>
+      </sectionn>
+
+      <!-- successful student section start -->
+
+      <!-- successful student section end -->
     </main>
 
     <!-- Flowbite - Tailwind CSS component library -->
