hidden section done

--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@
       </section>
       <!-- Register Now modal section end -->
 
+      <!-- successful student section start -->
       <sectionn
         class="container mt-12 mx-auto flex flex-col text-center lg:text-left h-100"
       >
@@ -710,16 +711,49 @@
         <div class="self-center">
           <button
             type="button"
-            class="text-white bg-blue-700  hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 rounded-lg text-sm px-8 py-4 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-10 font-semibold"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 rounded-lg text-sm px-8 py-4 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-10 font-semibold"
           >
             View All
           </button>
         </div>
       </sectionn>
-
-      <!-- successful student section start -->
-
       <!-- successful student section end -->
+
+      <!-- logo section start -->
+      <section
+        class="container mt-14 mx-auto flex flex-col text-center justify-center items-center h-100"
+      >
+        <h4 class="md:text-5xl text-2xl my-9  font-semibold">
+          Trusted by over 800+ companies
+        </h4>
+        <div class="lg:grid grid-cols-6 hidden">
+          <div>
+            <img src="images/company/company-1.png" alt="" />
+          </div>
+
+          <div>
+            <img src="images/company/company-2.png" alt="">
+          </div>
+
+          <div>
+            <img src="images/company/company-3.png" alt="">
+          </div>
+
+          <div>
+            <img src="images/company/company-4.png " alt="">
+          </div>
+
+          <div>
+            <img src="images/company/company-5.png" alt="">
+          </div>
+
+          <div>
+            <img src="images/company/company-6.png" alt="">
+          </div>
+        </div>
+      </section>
+
+      <!-- logo section end -->
     </main>
 
     <!-- Flowbite - Tailwind CSS component library -->
