--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       >
         <!-- Carousel wrapper -->
         <div
-          class="overflow-hidden relative text-center h-[70vh] object-fill rounded-lg md:h-[90vh]"
+          class="overflow-hidden relative text-center h-[80vh] object-fill rounded-lg md:h-[90vh]"
         >
           <!-- Item 1 -->
           <div
@@ -541,7 +541,7 @@
         </div>
 
         <!-- modal -->
-        <div class="ml-auto px-16">
+        <div class="md:ml-auto px-16">
           <div class="">
             <button
               type="button"
@@ -719,42 +719,223 @@
       </sectionn>
       <!-- successful student section end -->
 
+      <!-- Accordion section starts -->
+      <section
+        class="container mt-10 md:mt-20 mx-auto flex flex-col text-center h-100 w-100"
+      >
+        <h4 class="md:text-5xl text-2xl font-semibold">
+          Frequently Asked Questions
+        </h4>
+        <p class="md:text-lg text-sm font-medium mt-2 px-6 lg:px-0">
+          It is a long established fact that a reader will be distracted by the
+          <br />
+          readable content of a page when looking at its layout.
+        </p>
+
+        <div class="md:w-4/5 w-100 mx-auto mt-8">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item bg-white border border-gray-200">
+              <h2 class="accordion-header mb-0" id="headingOne">
+                <button
+                  class="accordion-button relative flex items-center w-full py-4 px-5 text-base md:text-xl font-semibold text-gray-800 text-left bg-white border-0 rounded-none transition focus:outline-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  What are the different between flexbox and grid?
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body py-4 px-5">
+                  <p class="text-left">
+                    Grid and flexbox. The basic difference between CSS Grid
+                    Layout and CSS Flexbox Layout is that flexbox was designed
+                    for layout in one dimension - either a row or a column. Grid
+                    was designed for two-dimensional layout - rows, and columns
+                    at the same time.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item bg-white border border-gray-200">
+              <h2 class="accordion-header mb-0" id="headingTwo">
+                <button
+                  class="accordion-button collapsed relative flex items-center w-full py-4 px-5 text-base md:text-xl font-semibold text-gray-800 text-left bg-white border-0 rounded-none transition focus:outline-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  What are the different between tailwindcss and bootstrap?
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body py-4 px-5">
+                  <p class="text-left">
+                    Bootstrap comes with a set of pre-styled responsive,
+                    mobile-first components that possess a definite UI kit.
+                    Tailwind CSS uses a set of utility classes to create a neat
+                    UI with more flexibility and uniqueness. Sites created using
+                    Bootstrap follow the generic pattern that makes them look
+                    identical
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item bg-white border border-gray-200">
+              <h2 class="accordion-header mb-0" id="headingThree">
+                <button
+                  class="accordion-button collapsed relative flex items-center w-full py-4 px-5 text-base md:text-xl font-semibold text-gray-800 text-left bg-white border-0 rounded-none transition focus:outline-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  What is css box model?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body py-4 px-5">
+                  <p class="text-left">
+                    In CSS, the term "box model" is used when talking about
+                    design and layout. The CSS box model is essentially a box
+                    that wraps around every HTML element. It consists of:
+                    margins, borders, padding, and the actual content.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="accordion-item bg-white border border-gray-200">
+              <h2 class="accordion-header mb-0" id="headingFour">
+                <button
+                  class="accordion-button collapsed relative flex items-center w-full py-4 px-5 text-base md:text-xl font-semibold text-gray-800 text-left bg-white border-0 rounded-none transition focus:outline-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour"
+                >
+                  What is semantic tag?
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body py-4 px-5">
+                  <p class="text-left">
+                    The HTML semantics refers to the tags that provide meaning
+                    to an HTML page rather than just presentation. It makes HTML
+                    more comprehensible by better defining the different
+                    sections and layout of web pages
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Accordion section end -->
+
       <!-- logo section start -->
       <section
-        class="container mt-14 mx-auto flex flex-col text-center justify-center items-center h-100"
+        class="container mt-10 mx-auto lg:flex flex-col text-center justify-center items-center h-100 hidden"
       >
-        <h4 class="md:text-5xl text-2xl my-9  font-semibold">
+        <h4 class="md:text-5xl text-2xl my-9 font-semibold">
           Trusted by over 800+ companies
         </h4>
-        <div class="lg:grid grid-cols-6 hidden">
+        <div class="grid grid-cols-6">
           <div>
             <img src="images/company/company-1.png" alt="" />
           </div>
 
           <div>
-            <img src="images/company/company-2.png" alt="">
+            <img src="images/company/company-2.png" alt="" />
           </div>
 
           <div>
-            <img src="images/company/company-3.png" alt="">
+            <img src="images/company/company-3.png" alt="" />
           </div>
 
           <div>
-            <img src="images/company/company-4.png " alt="">
+            <img src="images/company/company-4.png " alt="" />
           </div>
 
           <div>
-            <img src="images/company/company-5.png" alt="">
+            <img src="images/company/company-5.png" alt="" />
           </div>
 
           <div>
-            <img src="images/company/company-6.png" alt="">
+            <img src="images/company/company-6.png" alt="" />
           </div>
         </div>
       </section>
 
       <!-- logo section end -->
     </main>
+
+    <!-- footer section start -->
+    <footer
+      class="flex mt-20 bg-black text-white text-center justify-center flex--col py-12"
+    >
+      <div class="flex flex-col space-y-2 items-center">
+        <h4 class="md:text-2xl text-xl font-semibold">EDU TECH</h4>
+        <p class="font-medium text-xs">
+          Office 41, Zawaya Buildin, Ghala Muscat, <br />
+          Sultanate of Oman
+        </p>
+        <p class="font-medium text-xs">Privacy Ploicy | Terms of use</p>
+        <div>
+          <ul class="flex space-x-5 items-center">
+            <li>
+              <a href="https://www.facebook.com/Fk.nafi" target="_blank"
+                ><i class="fa-brands text-xl fa-square-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/forhad-khan-b277a821a/"
+                target="_blank"
+                ><i class="fa-brands text-xl fa-linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://github.com/xnafi" target="_blank"
+                ><i class="fa-brands text-xl fa-square-github"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://instagram.com/x_nafi" target="_blank">
+                <i class="fa-brands text-xl fa-square-instagram"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section end -->
 
     <!-- Flowbite - Tailwind CSS component library -->
     <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
