--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           readable <br />
           content of a page when looking at its layout.
         </p>
-        <div class="grid grid-cols-1 lg:grid-cols-2 mt-14 gap-6">
+        <div class="grid grid-cols-1 lg:grid-cols-2 mt-8 lg:mt-16 gap-6">
           <!-- box 1 -->
           <div
             class="flex justify-center md:flex-row flex-col h-full space-x-4 shadow-md rounded-xl py-5"
@@ -898,7 +898,7 @@
 
     <!-- footer section start -->
     <footer
-      class="flex mt-20 bg-black text-white text-center justify-center flex--col py-12"
+      class="flex mt-20 bg-black text-white text-center justify-center flex--col py-12 container"
     >
       <div class="flex flex-col space-y-2 items-center">
         <h4 class="md:text-2xl text-xl font-semibold">EDU TECH</h4>
